# ngo

./: .gitignore  README.md  license  pyproject.toml  requirements.txt  ruff.toml
analysisnotebooks/: Greensfunctions.ipynb  NGOpredictions.ipynb  animations.ipynb  basisfunctions.ipynb  bmpredictions.ipynb  hc2d.ipynb  hc2dpredictions.ipynb  massconservation.ipynb  posterplots.ipynb  quadrature.ipynb  scales.ipynb  solutions.ipynb  systemnets.ipynb  tdarcy.ipynb  timestepping.ipynb
datageneration/: datagenerator.py  datasaver.py  generatedataset.py  heatconduction2d.py  randompolynomials.py
developnotebooks/: B-splines.ipynb  BMVarMiON_symcheck.ipynb  ConvNd.ipynb  Cuthill_McKee.ipynb  Fourierbasis.ipynb  GMM.ipynb  GRF2.ipynb  GRF3.ipynb  GRF4.ipynb  GRF_new.ipynb  Gaussianrandomfield.ipynb  InvCNN.ipynb  KandK.ipynb  MFDarcy.ipynb  NGOdataset_check.ipynb  Nutilstutorial.ipynb  POD-B-spline-fit.ipynb  POD2.ipynb  RBFgrad.ipynb  Randompolynomials.ipynb  SVD_MF.ipynb  Trainingdata_restructured.ipynb  Unet.ipynb  VarMiON.ipynb  VarMiONcheck.ipynb  bmdataset_check.ipynb  bmpredictions.ipynb  chebyshev.ipynb  computationtime.ipynb  dataloaderspeed.ipynb  datasaver.ipynb  dataset_check.ipynb  dihedralsymmetry.ipynb  fno.ipynb  functionlist.ipynb  gausslegendre.ipynb  hc2dgeometry.ipynb  hc2dpredictions.ipynb  init-rbfs.ipynb  lagrangepolynomials.ipynb  (+26 more)
examples/: darcy.py  plots.ipynb  steadydiffusion.ipynb  steadydiffusion.py  tdarcy.py  trainparallel.py
fem/: GRF.py  GRF_new.py  GRF_old.py  ManufacturedSolutionsDarcy.py  datasaver.py  gaussianrandomfields-Copy1.py  gaussianrandomfields.py  gaussianrandomfields_temp.py  generatedataset.py  grf.py  hc2d.py  heatconduction2d.py  randompolynomials.py
ml/: BSplines.py  BranchNets.py  DataModule.py  NGO.py  NGO_D.py  PODBasis.py  Quadrature.py  RegularNN.py  mlp.py  (+13 more)
(+44 files in other folders)
