[project]
name = "ngo"
dynamic = ["version"]
description = "Networks and tools for the solution of PDEs using Neural Green's Operators (NGOs)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Joost Prins", email = "j.h.m.prins@tue.nl"}
]
keywords = ["neural network", "machine learning", "ai", "neural green's operator", "pde", "scientific machine learning", "scientific computing"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "numpy~=1.26.4",
    "scipy~=1.13.1",
    "matplotlib",
    "nutils~=8.8",
    "nutils-poly~=1.0.1",
    "torch~=2.5.1",
    "tensorboard~=2.13.0",
    "pytorch-lightning~=2.3.0",
    "opt-einsum~=3.3.0",
    "wandb~=0.19.4",
    "torch_harmonics~=0.7.3",
    "neuraloperator~=0.3.0",
    "dill~=0.3.6",
    "ipywidgets"
]


[project.urls]
Homepage = "https://github.com/JoostHMPrins/ngo-pde-gk"
Issues = "https://github.com/JoostHMPrins/ngo-pde-gk/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.optional-dependencies]
test = [
    "pytest",
    "hypothesis",
    "tabulate",
    "PyQt6",
]
dev = [
    "pytest",
    "hypothesis",
    "tabulate",
    "PyQt6",
    "black",
]


[tool.hatch.version]
path = "src/ngo/__about__.py"


[tool.hatch.build.targets.wheel]
packages = [
    "src/ngo",
    "src/ngo/testproblems",
    "src/ngo/trainingdata",
]


[tool.hatch.envs.test]
template = "default"
features = [
    "test"
]


[tool.hatch.envs.dev]
template = "default"
features = [
    "dev"
]
